<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 主界面 -->
    <string name="app_name">Drilling</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">设置</string>

    <!-- 班报填写 -->
    <string name="tourreport_minearea_title">矿区</string>
    <string name="tourreport_holenumber_title">孔号</string>
    <string name="tourreport_rigmachine_title">钻机</string>
    <string name="tourreport_date_title">日期</string>
    <string name="tourreport_time_title">时间</string>
    <string name="tourreport_time_span_title">至</string>
    <string name="tourreport_workcontent_new">工作内容</string>
    <string name="tourreport_takeover_new">交接说明</string>
    <string name="tourreport_workcontent_title">工作内容</string>
    <string name="tourreport_btn_submit_title">提交</string>
    <string name="tourreport_btn_reset_title">重置</string>
    <string name="tourreport_core_number">岩心编号</string>
    <string name="tourreport_core_left">岩心残留</string>
    <string name="tourreport_mudamount">泥浆消耗量</string>
    <string name="tourreport_upleft_title">上余(m)</string>
    <string name="tourreport_drilllength_title">进尺(m)</string>
    <string name="tourreport_holedeep_title">孔深(m)</string>
    <string name="tourreport_drilling_pressure_title">钻压(kg)</string>
    <string name="tourreport_rotate_speed_title">转速(r/min)</string>
    <string name="tourreport_pump_title">泵量(L/min)</string>
    <string name="tourreport_core_length_title">心长(m)</string>
    <string name="tourreport_takeover_instruction">交接说明</string>
    <string name="tourreport_fangxie_step">防斜措施</string>
    <string name="tourreport_fuzhengqichang">扶正器长</string>
    <string name="tourreport_handle_drilling_tools">交接钻具</string>
    <string name="tourreport_time_statistic">时间统计</string>
    <string name="tourreport_drilling_time">纯钻时长</string>
    <string name="tourreport_auxiliary_time">辅助时长</string>
    <string name="tourreport_holeinner_time">孔内事故</string>
    <string name="tourreport_device_repair_time">设备事故</string>
    <string name="tourreport_other_time">其他时长</string>
    <string name="tourreport_summary_time">总时长</string>
    <string name="tourreport_total_drillinglength">进尺</string>
    <string name="tourreport_total_corelength">取心</string>
    <string name="tourreport_total_holedeep">孔深</string>
    <string name="tourreport_total_lastholedeep">上一班孔深</string>
    <string name="tourreport_total_currentholedeep">当前孔深</string>
    <string name="tourreport_onduty">出勤人员</string>
    <string name="tourreport_time_to">至</string>

    <!-- 填写工作内容的界面 -->
    <string name="workcontent_upleft_hint">填写上余数量</string>
    <string name="workcontent_corenumber_hint">填写岩心编号</string>
    <string name="workcontent_coreleft_hint">填写残留岩心长度</string>
    <string name="workcontent_drillinglength_hint">填写进尺数量</string>
    <string name="workcontent_holedeep_hint">填写当前孔深</string>
    <string name="workcontent_corelength_hint">填写岩心长度</string>
    <string name="workcontent_pressure_hint">填写钻压数量</string>
    <string name="workcontent_rotatespeed_hint">填写钻机转速</string>
    <string name="workcontent_pump_hint">填写泵量</string>
    <string name="workcontent_mudamount_hint">填写泥浆消耗量</string>
    <string name="workcontent_save">保存</string>
    <string name="workcontent_cancel">取消</string>
    <string name="mile">m</string>
    <string name="kilogram">kg</string>
    <string name="rotatespeed">r/min</string>
    <string name="L">L/min</string>

    <!-- 填写交接说明 -->
    <string name="takeover_title">交接说明\n或者记事</string>
    <string name="takeover_desc_hint">填写交接说明</string>
    <string name="faxie_title">防斜措施</string>
    <string name="faxie_hint">输入防斜措施</string>
    <string name="fuzheng_title">扶正器长(m)</string>
    <string name="fuzheng_hint">输入扶正器长</string>
    <string name="takeover_tools_title">钻具交接</string>
    <string name="takeover_tools_hint">1个单根，长：3.02m：①3.02②     ③  ；41个立根， 长：371.87m。</string>
    <string name="tourleader_title">班长</string>
    <string name="onduty_title">记录员</string>
    <string name="onduty_hint">输入记录员</string>

    
    <!-- 班报查看页面 -->
    <string name="tourreportview_onduty_title">值班人员</string>
    
    
    <!-- 底部公共菜单模块 -->
    <string name="menu_bottom_1">班报填写</string>
    <string name="menu_bottom_2">班报查看</string>
    <string name="menu_bottom_3">统计分析</string>
    <string name="menu_bottom_4">个人设置</string>
    <string name="menu_more">菜单4</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_workcontent">WorkcontentActivity</string>
    <string name="title_activity_workcontent_list">WorkcontentListActivity</string>
    <string name="title_activity_takeover">TakeoverActivity</string>
    <string name="title_activity_tourreport_view">TourreportViewActivity</string>
    <string name="title_activity_drilling">DrillingActivity</string>
    <string name="title_activity_drillsettings">DrillSettingsActivity</string>
    
    <string name="title_btn_syn">同步</string>
    
    <!--  配置界面  -->
    <string name="title_setting_minearea">矿区</string>
    <string name="title_setting_geologysituation">地层情况</string>
    <string name="title_setting_hole">钻孔</string>
    <string name="title_setting_contract">合同</string>
    <string name="title_setting_projectmanager">项目经理</string>
    <string name="title_setting_administrator">机长</string>
    <string name="title_setting_tourleader">班长</string>
    <string name="title_setting_rigmachine">钻机</string>
    <string name="title_setting_drilltower">钻塔</string>
    <string name="title_setting_pump">泥浆泵</string>
    <string name="title_setting_server_ip">服务器IP</string>
    <string name="title_setting_request_btn">获取</string>
    
    
    <!--  班报列表界面 -->
    <string name="title_tourreport_image_flag">班报状态的标识图片</string>

    
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 登录界面 -->
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_reset">重置</string>
    <string name="login_server_ip">服务器IP地址</string>
    <string name="login_server_port">端口号</string>
    <string name="login_server_ip_and_port">服务器IP地址和端口</string>
    
</resources>
