<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".WorkcontentActivity" >

    <!-- 班报填写的工作内容界面 -->

    <include
        android:id="@+id/title_bar"
        layout="@layout/title" />

    <ScrollView
        android:id="@+id/news_srollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:fadingEdge="none" >

        <LinearLayout
            android:id="@+id/product_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_time_title"
                    android:textColor="@color/black_25"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sub_starttime_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tourreport_time_to"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sub_endtime_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/red"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_workcontent_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/sub_workcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <!-- 上余 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_upleft_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_upleft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_upleft_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mile"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 进尺 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_drilllength_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_drillinglength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_drillinglength_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mile"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 孔深 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_holedeep_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_holedeep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_holedeep_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mile"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 岩心长度 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_core_length_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_core_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_corelength_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mile"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 钻压 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_drilling_pressure_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_pressure_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilogram"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 转速 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_rotate_speed_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_rotatespeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_rotatespeed_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotatespeed"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 泵量 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tourreport_pump_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sub_workcontent_pump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/workcontent_pump_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/L"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 确定按钮 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/workcontent_save"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/workcontent_save"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />
                
                <Button
                    android:id="@+id/workcontent_cancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/workcontent_cancel"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>